<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/def_dark">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="267dp"
        android:layout_height="160dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo_nobackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="331dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/bebas_neue_regular"
        android:text="Registro de nuevo usuario"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <ScrollView
        android:id="@+id/form"
        android:layout_width="408dp"
        android:layout_height="380dp"
        android:layout_marginTop="19dp"
        android:scrollbarStyle="insideInset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailRField"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/email_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailRText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordRField"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/password_text"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordRText"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameRField"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/name_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameRText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameRField"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/username_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameRText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/photoButton"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="12dp"
                android:backgroundTint="@color/black_dark"
                android:text="@string/photo_text" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.chip.Chip
        android:id="@+id/scrollDownMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="560dp"
        android:text="@string/scroll_down"
        app:chipIcon="@drawable/arrow_down"
        app:chipIconTint="?attr/colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/red"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/buttonR"
        app:layout_constraintTop_toBottomOf="@+id/form" />

    <Button
        android:id="@+id/buttonR"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="@color/gray"
        android:text="@string/singup_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form" />


</androidx.constraintlayout.widget.ConstraintLayout>