<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">


    <TextView
        android:id="@+id/backSquare"
        android:layout_width="355dp"
        android:layout_height="598dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="38dp"
        android:background="@color/cardview_shadow_start_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailField"
        android:layout_width="315dp"
        android:layout_height="63dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/email_text"
        app:layout_constraintEnd_toEndOf="@+id/backSquare"
        app:layout_constraintTop_toBottomOf="@+id/logo">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordField"
        android:layout_width="315dp"
        android:layout_height="63dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/password_text"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/backSquare"
        app:layout_constraintTop_toBottomOf="@+id/emailField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/green"
        android:text="@string/login_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/backSquare"
        app:layout_constraintTop_toBottomOf="@+id/passwordField" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/gray"
        android:text="@string/register_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/backSquare"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

</androidx.constraintlayout.widget.ConstraintLayout>